# jsonlines

./: .gitignore  .readthedocs.yaml  .travis.yml  README.rst  mypy.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
doc/: conf.py  index.rst
jsonlines/: __init__.py  jsonlines.py
tests/: sample-crlf-line-separators.jsonl  sample-no-eol-at-eof.jsonl  sample.jsonl  test_jsonlines.py  test_typing.py
