[metadata]
name = jsonlines
version = 1.2.0
author = Wouter Bolsterlee
author_email = wouter@bolsterl.ee
license = BSD
license_file = LICENSE.rst
description = Library with helpers for the jsonlines file format
long_description = file: README.rst
url = https://github.com/wbolster/jsonlines
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: Log Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: Utilities

[options]
packages = jsonlines
install_requires = six

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = doc/
build-dir = doc/build/
