[metadata]
name = jsonlines
version = 1.2.0
author = Wouter Bolsterlee
author_email = wouter@bolsterl.ee
license = BSD
license_file = LICENSE.rst
description = Library with helpers for the jsonlines file format
long_description = file: README.rst
url = https://github.com/wbolster/jsonlines
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: Log Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: Utilities

[options]
packages = jsonlines
python_requires = >=3.6

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[flake8]
max-line-length = 88
extend-ignore = E203
